# slack-ai-bot

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
docs/: agent_workflow.drawio  database_schema.drawio  infrastructure.drawio
migrations/: create_chat_sessions.sql  create_feedbacks.sql  create_messages.sql  create_task_plans.sql  create_tasks.sql
src/: di_container.py  main.py
src/application/exception/: __init__.py  base.py  usecase_exception.py
src/application/usecase/: __init__.py  answer_to_user_request_usecase.py  feedback_usecase.py
src/config/: __init__.py
src/domain/: llm_client.py  search_client.py
src/domain/exception/: __init__.py  base.py  chat_session_exception.py  message_exception.py  service_exception.py  task_exception.py  task_log_exception.py  task_plan_exception.py
src/domain/model/: __init__.py  chat_session.py  conversation.py  feedback.py  final_answer.py  general_answer_task_log.py  message.py  task.py  task_evaluation.py  task_log.py  task_plan.py  web_search_task_log.py  workflow_result.py
src/domain/repository/: __init__.py  chat_session_repository.py  conversation_repository.py  feedback_repository.py
src/domain/service/: __init__.py  agent_workflow_service.py  answer_generation_service.py  final_answer_service.py  general_answer_service.py  search_query_generation_service.py  task_plan_service.py  task_result_evaluation_service.py  task_result_generation_service.py  workflow_service.py
src/infrastructure/agent/: state.py
src/infrastructure/database/: __init__.py  connection_pool.py  migration.py
src/infrastructure/exception/: __init__.py  agent_exception.py  base.py  config_exception.py  llm_exception.py  repository_exception.py
src/infrastructure/langgraph/: __init__.py
src/infrastructure/llm/: model_factory.py
src/infrastructure/repository/: __init__.py  chat_session_repository.py  feedback_repository.py  in_memory_chat_session_repository.py
src/infrastructure/service/: __init__.py  langgraph_workflow_service.py  message_service.py  task_state_service.py
src/infrastructure/slack/: __init__.py  slack_adapter.py  slack_message_service.py
src/log/: logger.py
src/presentation/: __init__.py
src/presentation/controllers/: __init__.py  mention_controller.py  message_controller.py  slack_feedback_controller.py  slack_message_controller.py
src/presentation/dto/: __init__.py  slack_request_dto.py
src/presentation/exception/: __init__.py  base.py  request_exception.py
src/presentation/mapper/: __init__.py  slack_request_mapper.py
terraform/environment/dev/: backend.tf  local.tf  main.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/modules/cloudrun/: main.tf  variables.tf
terraform/modules/network/: main.tf  output.tf  variables.tf
terraform/modules/postgres/: main.tf  output.tf  variables.tf
terraform/modules/repository/: main.tf  output.tf  variables.tf
terraform/modules/secret-manager/: main.tf  output.tf  variables.tf
tests/application/usecase/: test_answer_to_user_request_usecase.py  test_answer_to_user_request_usecase_integration.py  test_feedback_usecase.py  test_feedback_usecase_integration.py
tests/domain/model/: test_chat_session.py  test_feedback.py  test_general_answer_task_log.py  test_message.py  test_task.py  test_task_plan.py  test_web_search_task_log.py
tests/domain/service/: test_answer_generation_service.py  test_final_answer_service.py  test_general_answer_service.py  test_search_query_generation_service.py  test_task_plan_service.py  test_task_result_evaluation_service.py  test_task_result_generation_service.py
(+42 files in other folders)
