[project]
name = "slack-ai-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.0",
    "bs4>=0.0.2",
    "fastapi>=0.118.2",
    "google-cloud-aiplatform>=1.120.0",
    "google-cloud-logging>=3.12.1",
    "google-cloud-secret-manager>=2.24.0",
    "google-cloud-storage>=2.18.0",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-google-community>=3.0.0",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "psycopg[binary]>=3.2.12",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "slack-bolt>=1.26.0",
    "uvicorn>=0.37.0",
    "watchfiles>=1.1.1",
    "yoyo-migrations>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

